Fix Delete option on skills panel
Ref Some issues with skill formatting #48

`opacity: 0` causes unusual behaviors such as being able
to click the select even though it is invisible, and it also breaks the
repeating delete function.

Both are fixed by making the fields be `pointer-events: none`

The error is seen in the skills tab at the end of this video:

https://user-images.githubusercontent.com/5629800/211176481-ad27daf7-1c1e-4784-a8fd-96ca6629775d.mp4

Fixed:

https://user-images.githubusercontent.com/5629800/211176758-a699c372-2407-4b73-9287-cab7b4c1e81e.mp4

--- a/bin/main.css
+++ b/bin/main.css
@@ -1438,6 +1438,8 @@ radio > span.checked {
 .epic-skills-tab .isdiscipline-grid[value="1"] ~ .skillattribute-grid,
 .epic-skills-tab .isdiscipline-grid[value="1"] ~ .skillbase-grid {
   opacity: 0;
+  cursor: default;
+  pointer-events: none;
 }
 .epic-skills-tab .skillTP-grid, .epic-skills-tab .TP-grid {
   color: #267200;
